fix: add position fixed to the header on tablet

--- a/pages/main/styles/style.scss
+++ b/pages/main/styles/style.scss
@@ -100,6 +100,7 @@ body {
 
     @media (min-width: 640px) {
       padding: 0 20px;
+      position: fixed;
     }
 
     @media (min-width: 1000px) {
